# py-github-analyzer

./: .env_example  .gitignore  Dockerfile  LICENSE  MANIFEST.in  README.md  pyproject.toml
py_github_analyzer/: __init__.py  __main__.py  async_github_client.py  cli.py  config.py  core.py  exceptions.py  file_processor.py  logger.py  metadata_generator.py  output_writer.py  py.typed  utils.py
py_github_analyzer/analysis/: __init__.py  api_strategy.py  ast_extractor.py  fallback_strategy.py  strategy.py  zip_strategy.py
py_github_analyzer/processing/: __init__.py  dependency_extractor.py  file_prioritizer.py  language_detector.py  processor.py
tests/: conftest.py  test_ast_extractor.py  test_async_github_client.py  test_cli.py  test_config.py  test_core.py  test_exceptions.py  test_file_processor.py  test_init.py  test_logger.py  test_metadata_generator.py  test_utils.py
tests/manual/: test_remote_signature_integration.py
